--- a/index.css
+++ b/index.css
@@ -14,6 +14,28 @@
   -webkit-text-size-adjust: 100%;
 }
 
+body {
+  margin: 0;
+}
+
+#root {
+  text-align: center;
+}
+
+p {
+  margin: 2rem 0;
+  font-weight: bold;
+}
+
+ul {
+  text-align: left;
+}
+
+h1 {
+  font-size: 2rem;
+  line-height: 1.1;
+}
+
 a {
   font-weight: 500;
   color: #646cff;
@@ -23,17 +45,10 @@ a:hover {
   color: #535bf2;
 }
 
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
-}
-
-h1 {
-  font-size: 2rem;
-  line-height: 1.1;
+img {
+  display: block;
+  max-width: 100%;
+  margin: 2rem 0;
 }
 
 button {
